--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- ANIMATE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
     <title>Contáctanos</title>
 </head>
@@ -13,7 +17,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo"> <!--LOGO-->
+                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo animate__animated animate__lightSpeedInLeft"> <!--LOGO-->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span><img src="../assets/menu-desple.png" class="navbar-svg" alt=""></span> <!--logo del desplegable-->
@@ -42,34 +46,34 @@
     </header> 
 
     <main> 
-        <h1>Formulario de Reservas</h1> <!--titulo principal--> 
+        <h1 class="animate__animated animate__lightSpeedInLeft">Formulario de Reservas</h1> <!--titulo principal--> 
         <h2 class="h2-formulario">Completa el formulario y te contactaremos pronto</h2>
         <section class="formulario">
                 
             <div class="content-de-contacto"> <!--Formulario de contacto-->
                 <form action=""method="post"> 
 
-                <div class="contenedor-label">   
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" name="nombre" id="nombre">
-                </div>
+                    <div class="contenedor-label">   
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" name="nombre" id="nombre">
+                    </div>
 
-                <div class="contenedor-label"> 
-                    <label for="telefono">Télefono:</label>
-                    <input type="tel" name="telefono" id="telefono">
-                </div>
+                    <div class="contenedor-label"> 
+                        <label for="telefono">Télefono:</label>
+                        <input type="tel" name="telefono" id="telefono">
+                    </div>
 
-                <div class="contenedor-label"> 
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" id="email">
-                </div>
+                    <div class="contenedor-label"> 
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email">
+                    </div>
 
-                <div class="contenedor-label">
-                    <label for="mensaje">Mensaje:</label>
-                    <textarea name="mensaje" id="mensaje"></textarea>
-                </div>
+                    <div class="contenedor-label">
+                        <label for="mensaje">Mensaje:</label>
+                        <textarea name="mensaje" id="mensaje"></textarea>
+                    </div>
 
-                <input class= "boton-enviar" type="submit" value="Enviar">
+                    <input class= "boton-enviar" type="submit" value="Enviar">
 
                 </form>
                 <p class="p-formulario">Te esperamos en nuestro local para asesorarte personalmente. Consultá el mapa para ver cómo llegar fácilmente.</p>
