--- a/pages/nuestros-trabajos.html
+++ b/pages/nuestros-trabajos.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ANIMATE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
     <title>Nuestros trabajos</title>
 </head>
@@ -13,7 +17,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo"> <!--LOGO-->
+                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo animate__animated animate__lightSpeedInLeft"> <!--LOGO-->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span><img src="../assets/menu-desple.png" class="navbar-svg" alt=""></span> <!--logo del desplegable-->
@@ -42,7 +46,8 @@
     </header> 
 
     <main> <!-- contenido principal -->
-        <h1>Técnicas que realzan tu estilo</h1>
+        <h1 class="animate__animated animate__lightSpeedInLeft">Técnicas que realzan tu estilo</h1>
+        
 
         <div class="contenedor-nt">
                    
