Web con imágenes opmitizadas, keywords y descriptions en todos los HTML.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="uñas esculpidas, uñas gel, uñas soft gel, uñas semipermanentes, manicura profesional, Estelar Nails, diseños de uñas, uñas decoradas, capping, poly gel, cat eye, manicura en Rosario">
+    <meta name="description" content="En Estelar Nails transformamos tus manos con técnicas profesionales como Soft Gel, Capping, Semis, Poly Gel y Cat Eye. Diseño personalizado, elegancia y calidad para que tus uñas luzcan increíbles en cada momento.">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- ANIMATE -->
@@ -18,11 +20,11 @@
    <header>
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo animate__animated animate__lightSpeedInLeft"> <!--LOGO-->
+                <a class="navbar-brand animate__animated animate__lightSpeedInLeft" href="../index.html">
+                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo "> <!--LOGO-->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><img src="./assets/menu-desple.png" class="navbar-svg" alt=""></span> <!--logo del desplegable-->
+                    <span><img src="./assets/menu-desple.png" class="navbar-svg" alt="logo del menu desplegable"></span> <!--logo del desplegable-->
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -51,6 +53,7 @@
         <h1 class="animate__animated animate__lightSpeedInLeft">Tus uñas a la altura de tu vida</h1> 
         <section class="content-inicio" data-aos="flip-up">
             <div class="title-paragraph-inicio">
+
                 <h2>Que cada detalle hable de vos</h2>
 
                 <p>En <strong>Estelar Nails</strong> sabemos que unas uñas bien cuidadas pueden cambiar por completo la manera en que te sentís y te mostrás al mundo. Por eso, transformamos cada diseño en una experiencia personalizada, donde la creatividad, la técnica y el amor por lo que hacemos se unen para resaltar tu esencia.</p>
@@ -58,13 +61,17 @@
                 <p>En Estelar Nails no solo embellecemos tus manos, creamos una conexión entre tu estilo y tu confianza. Porque cuando tus uñas lucen increíbles, vos también te sentís imparable.</p>       
             
             </div> 
-                <img class="img-inicio" src="./assets/uñas-inicio.png" alt="imagen-inicio">
+
+                <img class="img-inicio" src="./assets/uñas-inicio.jpg" alt="imagen uñas claras">
+                
         </section>
 
          <section class="content-inicio" data-aos="flip-up" >
 
-            <img class="img-inicio" src="./assets/uñas-inicio2.webp" alt="imagen-inicio">
+            <img class="img-inicio" src="./assets/uñas-inicio2.jpg" alt="imagen uñas oscuras">
+
             <div class="title-paragraph-inicio">
+
                 <h2 >Tu bienestar, nuestra prioridad</h2>
 
                 <p>En <strong>Estelar Nails</strong> trabajamos con productos premium y técnicas actualizadas para garantizarte uñas fuertes, duraderas y cuidadas en cada detalle.</p>
@@ -83,10 +90,10 @@
 
         <div class="container-img-footer">
             <a href="https://www.instagram.com/" target="_blank">
-                <img class="imgs-footer" src="../assets/instagram-icon.png" alt="logo de instagram" >
+                <img class="imgs-footer" src="./assets/instagram-icon.png" alt="logo de instagram" >
             </a>
             <a href="https://www.whatsapp.com/?lang=es" target="_blank">
-                <img class="imgs-footer" src="../assets/whatsapp-icon.png" alt="logo de whatsapp" >
+                <img class="imgs-footer" src="./assets/whatsapp-icon.png" alt="logo de whatsapp" >
             </a>
         </div>
 
