--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- ANIMATE -->
+    <meta name="keywords" content="Reservar cita uñas Rosario, Teléfono Estelar Nails, Dirección salón de uñas Rosario, Turnos disponibles uñas esculpidas, Consulta precios uñas Soft Gel, Horario de atención Estelar Nails, Ubicación de Estelar Nails, Cómo llegar a Estelar Nails, Presupuesto uñas Capping, Contacto para manicura profesional Rosario">
+    <meta name="description" content="Reservá tu turno en Estelar Nails. Completá el formulario y te asesoramos para elegir el diseño ideal. Ubicación, contacto y atención personalizada para que tus uñas luzcan perfectas.">
+    <!-- ANIMATE -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Contáctanos</title>
+    <title>Contacto | Estelar Nails</title>
 </head>
 <body>
 
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo animate__animated animate__lightSpeedInLeft"> <!--LOGO-->
+                <a class="navbar-brand animate__animated animate__lightSpeedInLeft" href="../index.html">
+                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo"> <!--LOGO-->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><img src="../assets/menu-desple.png" class="navbar-svg" alt=""></span> <!--logo del desplegable-->
+                    <span><img src="../assets/menu-desple.png" class="navbar-svg" alt="logo del menu desplegable"></span> <!--logo del desplegable-->
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -48,6 +50,7 @@
     <main> 
         <h1 class="animate__animated animate__lightSpeedInLeft">Formulario de Reservas</h1> <!--titulo principal--> 
         <h2 class="h2-formulario">Completa el formulario y te contactaremos pronto</h2>
+
         <section class="formulario">
                 
             <div class="content-de-contacto"> <!--Formulario de contacto-->
