--- a/pages/tecnicas-y-estilos.html
+++ b/pages/tecnicas-y-estilos.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="soft gel uñas, uñas semipermanentes paso a paso, técnica capping, uñas poly gel, uñas cat eye, tipos de uñas esculpidas, técnicas de uñas profesionales, diferencias entre gel y semis, uñas resistentes y duraderas, estilos de uñas modernos">
+    <meta name="description" content="Explorá las técnicas de uñas que realzan tu estilo: Soft Gel, Semis, Capping, Poly Gel y Cat Eye. Conocé cada diseño paso a paso y encontrá la opción perfecta para vos en Estelar Nails.">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- ANIMATE -->
@@ -11,18 +13,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Técnicas y Estilos</title>
+    <title>Técnicas y Estilos | Estelar Nails</title>
 </head>
 <body>
 
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo animate__animated animate__lightSpeedInLeft"> <!--LOGO-->
+                <a class="navbar-brand animate__animated animate__lightSpeedInLeft" href="../index.html">
+                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo "> <!--LOGO-->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><img src="../assets/menu-desple.png" class="navbar-svg" alt=""></span> <!--logo del desplegable-->
+                    <span><img src="../assets/menu-desple.png" class="navbar-svg" alt="logo del menu desplegable"></span> <!--logo del desplegable-->
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -54,9 +56,9 @@
         <section class="contenedor-tye">
 
             <article id="tecnicas-de-soft-gel" class="cont-img-tye " data-aos="fade-right"> <!--soft gel -->
-                <img class="imgs-tec-esti " src="../assets/soft-gel.png" alt="img-soft-gel" >
+                <img class="imgs-tec-esti " src="../assets/soft-gel.jpg" alt="img-soft-gel" >
                 <div class="ol-tye">
-                    <h3>Soft gel</h3>
+                    <h2>Soft gel</h2>
                     <ol>
                         <li>Preparar la uña natural: empujar cutícula, limar, quitar brillo, limpiar y aplicar primer.</li>
                         <li>Elegir el tip adecuado: que cubra bien la uña sin tocar piel.</li>
@@ -69,9 +71,9 @@
             </article>
 
             <article id="tecnicas-de-semis" class="cont-img-tye" data-aos="fade-left"> <!--semis -->
-                <img class="imgs-tec-esti" src="../assets/semis.png" alt="img-semis" >
+                <img class="imgs-tec-esti" src="../assets/semis.jpg" alt="img-semis" >
                 <div class="ol-tye">
-                    <h3>Semis</h3>
+                    <h2>Semis</h2>
                     <ol>
                         <li>Preparar la uña: empujar cutícula, limar, quitar brillo y limpiar.</li>
                         <li>Aplicar primer o deshidratador.</li>
@@ -85,9 +87,9 @@
             </article> 
 
             <article id="tecnicas-de-capping" class="cont-img-tye" data-aos="fade-right"> <!--capping -->
-                <img class="imgs-tec-esti" src="../assets/capping.png" alt="img-capping" >
+                <img class="imgs-tec-esti" src="../assets/capping.jpg" alt="img-capping" >
                 <div class="ol-tye">
-                    <h3>Capping</h3>
+                    <h2>Capping</h2>
                     <ol>
                         <li>Preparar la uña: empujar cutícula, limar, quitar brillo y limpiar.</li>
                         <li>Aplicar primer o deshidratador.</li>
@@ -102,9 +104,9 @@
             </article> 
 
              <article id="tecnicas-de-cat-eye" class="cont-img-tye" data-aos="fade-left"> <!--cat eye -->
-                 <img class="imgs-tec-esti" src="../assets/cat-eye.png" alt="img-cat-eye" >
+                 <img class="imgs-tec-esti" src="../assets/cat-eye-nt.jpg" alt="img-cat-eye" >
                 <div class="ol-tye">
-                    <h3 >Cat eye</h3>
+                    <h2>Cat eye</h2>
                     <ol>
                         <li>Preparar la uña: limpiar, limar, quitar brillo y aplicar primer.</li>
                         <li>Base coat: capa fina y curar en lámpara.</li>
@@ -119,9 +121,9 @@
              </article> 
 
              <article id="tecnicas-de-poly-gel" class="cont-img-tye " data-aos="fade-right"> <!--poly gel -->
-                 <img class="imgs-tec-esti" src="../assets/poly-gel.png" alt="img-poly-gel" >
+                 <img class="imgs-tec-esti" src="../assets/poly-gel.jpg" alt="img-poly-gel" >
                 <div class="ol-tye">
-                    <h3>Poly gel</h3>
+                    <h2>Poly gel</h2>
                     <ol>
                         <li>Preparar la uña: empujar cutícula, limar, quitar brillo y limpiar.</li>
                         <li>Aplicar primer o deshidratador.</li>
@@ -137,9 +139,9 @@
              </article> 
 
             <article class="cont-img-tye" data-aos="fade-left"> <!--exfoliación e hidratación -->
-                 <img class="imgs-tye-pies" src="../assets/pies.png" alt="img-pies">
+                 <img class="imgs-tye-pies" src="../assets/pies2.jpg" alt="img-pies">
                 <div class="ol-tye">
-                    <h3>Exfoliación e Hidratación de manos y pies</h3>
+                    <h2>Exfoliación e Hidratación de manos y pies</h2>
                     <ol>
                         <li>Limpieza inicial: lavar y desinfectar manos o pies.</li>
                         <li>Exfoliación: aplicar exfoliante con masajes suaves circulares para eliminar células muertas.</li>
