--- a/pages/nuestros-trabajos.html
+++ b/pages/nuestros-trabajos.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Cómo hacer uñas Soft Gel paso a paso, Capping de uñas para principiantes, Técnica de esmaltado Semipermanente en casa, Preparación de la uña natural para Capping, Guía completa de aplicación de Poly gel, Pasos para lograr efecto Cat Eye perfecto">
+    <meta name="description" content="Mirá nuestros trabajos y descubrí diseños únicos creados con dedicación, precisión y creatividad. Uñas esculpidas, gel, semipermanente y nail art profesional realizado en Estelar Nails.">
     <!-- ANIMATE -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Nuestros trabajos</title>
+    <title>Nuestros Trabajos | Estelar Nails</title>
 </head>
 <body class="body-nuestros-trabajos">
 
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo animate__animated animate__lightSpeedInLeft"> <!--LOGO-->
+                <a class="navbar-brand animate__animated animate__lightSpeedInLeft" href="../index.html">
+                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo"> <!--LOGO-->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><img src="../assets/menu-desple.png" class="navbar-svg" alt=""></span> <!--logo del desplegable-->
+                    <span><img src="../assets/menu-desple.png" class="navbar-svg" alt="logo del menu desplegable"></span> <!--logo del desplegable-->
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -62,20 +64,20 @@
                 <div class="contenedor-principal-imgs">
                 
                     <a class= "img-grande1" href="tecnicas-y-estilos.html#tecnicas-de-cat-eye" title="tecnicas de cat eye">
-                        <img src="../assets/cat-eye.png" alt="cat-eye" class="imagen-grande"> 
+                        <img src="../assets/cat-eye.jpg" alt="cat-eye" class="imagen-grande"> 
                     </a>
       
                     <a class= "img-chica1" href="tecnicas-y-estilos.html#tecnicas-de-capping" title="tecnica de capping">
-                        <img src="../assets/capping.png" alt="capping" class="imagenes-chicas1">
+                        <img src="../assets/capping.jpg" alt="capping" class="imagenes-chicas1">
                     </a>
                     <a class= "img-chica2" href="tecnicas-y-estilos.html#tecnicas-de-soft-gel" title="tecnica de soft gel">
-                        <img src="../assets/soft-gel.png" alt="soft-gel" class="imagenes-chicas2">
+                        <img src="../assets/soft-gel.jpg" alt="soft-gel" class="imagenes-chicas2">
                     </a>   
                     <a class= "img-chica3" href="tecnicas-y-estilos.html#tecnicas-de-poly-gel" title="tecnicas de poly gel">
-                        <img src="../assets/Poly-gel.png" alt="poly-gel" class="imagenes-chicas3">
+                        <img src="../assets/poly-gel.jpg" alt="poly-gel" class="imagenes-chicas3">
                     </a> 
                     <a class= "img-chica4" href="tecnicas-y-estilos.html#tecnicas-de-semis" title="tecnica de semis">
-                        <img src="../assets/Semis.png" alt="semis" class="imagenes-chicas4">
+                        <img src="../assets/semis.jpg" alt="semis" class="imagenes-chicas4">
                     </a> 
 
                 </div>    
