--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="servicio de uñas, manicura completa, cuidado de manos y pies, pedicura profesional, estética de uñas, esculpido en gel, mantenimiento de uñas, tratamientos de manos, exfoliación y spa de manos, servicios de nail studio">
+    <meta name="description" content="Descubrí nuestros servicios de manicura profesional: diseños personalizados, tratamientos para manos y pies, uñas esculpidas y técnicas en gel de alta duración. Calidad, precisión y estilo en cada detalle.">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- ANIMATE -->
@@ -11,18 +13,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Servicios</title>
+    <title>Servicios | Estelar Nails</title>
 </head>
 <body class="body-servicios">
 
     <header>
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo animate__animated animate__lightSpeedInLeft"> <!--LOGO-->
+                <a class="navbar-brand animate__animated animate__lightSpeedInLeft" href="../index.html">
+                    <img src="../assets/logo-2.png" alt="logo-estelar-nails" class="logo"> <!--LOGO-->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><img src="../assets/menu-desple.png" class="navbar-svg" alt=""></span> <!--logo del desplegable-->
+                    <span><img src="../assets/menu-desple.png" class="navbar-svg" alt="logo del menu desplegable"></span> <!--logo del desplegable-->
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -53,14 +55,14 @@
         <section class="content-principal-servicios">
             
                 <article class="content-uñas-rojas">    <!--seccion de solo manos-->
-                    <img src="../assets/uñas-servicios.png" alt="uñas-rojas" class="img-servicios-manos">
+                    <img src="../assets/uñas-servicios.jpg" alt="imagen de uñas rojas" class="img-servicios-manos">
                     <h2>Técnica, arte y cuidado en cada detalle</h2>
                     <p>Diseños personalizados, esculpidos en gel, acrílico o semipermanente.
                     Trabajamos cada diseño a medida, con técnicas como Capping, Soft Gel, Poly Gel y Cat Eye, para lograr un acabado profesional, duradero y único.</p>
                 </article> 
            
                 <article class="content-pies">   <!--seccion de pies-->
-                    <img src="../assets/manos-y-pies-2.png" alt="pies" class="img-servicios-pies"> 
+                    <img src="../assets/manos-y-pies-2.jpg" alt="imagen de pies" class="img-servicios-pies"> 
                     <h2>Dale a tus manos y pies el cuidado que merecen</h2>
                     <p>Cuidá tus manos y pies con nuestros tratamientos de exfoliación e hidratación.
                     Eliminamos células muertas, suavizamos la piel y dejamos una sensación de frescura y suavidad que vas a amar.</p>
