Ajustes finales en media queries antes de la entrega fina

--- a/pages/nuestros-trabajos.html
+++ b/pages/nuestros-trabajos.html
@@ -88,12 +88,9 @@
         
         <section class="guia-tecnica">
             <h2>¿No sabés qué técnica elegir?</h2>
-            <p>
-                Si tenés dudas sobre qué técnica se adapta mejor a vos, esta guía rápida te ayuda a orientarte.
-                Cada opción ofrece un resultado distinto según tu estilo, tus uñas y lo que estés buscando.
-            </p>
+            <p class="p-tecnica">Si tenés dudas sobre qué técnica se adapta mejor a vos, esta guía rápida te ayuda a orientarte.Cada opción ofrece un resultado distinto según tu estilo, tus uñas y lo que estés buscando.</p>
 
-            <ul>
+            <ul class="ul-tecnica">
                 <li data-aos="fade-left"><strong>Capping:</strong> Perfecto si ya tenés uñas largas y solo querés fortalecerlas sin agregar grosor extra.</li>
                 <li data-aos="fade-right"><strong>Soft Gel:</strong> Ideal si buscás un acabado natural, liviano y cómodo para todos los días.</li>
                 <li data-aos="fade-left"><strong>Cat Eye:</strong> Una opción moderna y llamativa, con efecto imán que resalta en cualquier diseño.</li>
