--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -75,33 +75,21 @@
 
             <div class="bloque-servicios" data-aos="flip-up">
                 <h3>Preparación & Cuidado</h3>
-                <p>
-                    Higienización, limado, cutículas y preparación profesional para asegurar 
-                    un acabado prolijo, seguro y duradero.
-                </p>
+                <p>Higienización, limado, cutículas y preparación profesional para asegurar un acabado prolijo, seguro y duradero.</p>
             </div>
 
             <div class="bloque-servicios" data-aos="flip-down">
                 <h3>Tratamientos de Bienestar</h3>
-                <p>
-                    Exfoliación de manos o pies, hidratación profunda y masaje relajante 
-                    para una sensación de frescura y suavidad total.
-                </p>
+                <p> Exfoliación de manos o pies, hidratación profunda y masaje relajante para una sensación de frescura y suavidad total.</p>
             </div>
 
             <div class="bloque-servicios" data-aos="flip-up">
                 <h3>Aplicación de la Técnica Elegida</h3>
-                <p>
-                    Capping, Soft Gel, Poly Gel, semis, acrílico o diseño personalizado: 
-                    cada técnica se adapta a tu estilo y necesidades.
-                </p>
+                <p>Capping, Soft Gel, Poly Gel, semis, acrílico o diseño personalizado: cada técnica se adapta a tu estilo y necesidades.</p>
             </div>
 
             <div class="bloque-servicios" data-aos="flip-down">
-                <p>
-                    Todos nuestros servicios combinan estética, salud y confort, para que 
-                    tus manos y pies se vean increíbles y se sientan cuidados.
-                </p>
+                <p>Todos nuestros servicios combinan estética, salud y confort, para que tus manos y pies se vean increíbles y se sientan cuidados.</p>
             </div>
         </section>
 
